tests/qd/compile_errors/abort_on_non_fallible.qd
// Test: cannot use ! on non-fallible function

fn normal_add(a:i b:i -- c:i) {
	add
}

fn main() {
	10 20 normal_add!
	. nl
}
